<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_rl</name>
  <version>0.0.1</version>
  <description>Reinforcement learning package for robotic arm control</description>
  <maintainer email="tarunkumarmpc@gmail.com">tarun</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-gym</exec_depend>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

